hotfix(guide page): fix guide overlap conflict

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -193,7 +193,6 @@ body::before {
     width: 100%;
 }
 
-
 /* ===== HEADER ===== */
 .header {
     position: sticky;
@@ -250,10 +249,8 @@ body::before {
 
 
 .header__logo img {
-    display: block;
     transition: filter var(--transition-medium);
     filter: none; 
-    margin: 0 2rem 0 0;
 }
 
 
@@ -261,12 +258,12 @@ body::before {
     filter: invert(1) brightness(1.2);
 }
 
+
 @media (prefers-color-scheme: dark) {
     :root:not([data-theme="light"]) .header__logo img {
         filter: invert(1) brightness(1.2);
     }
 }
-
 
 /* ===== SEARCH ===== */
 .search-container {
@@ -382,7 +379,7 @@ body::before {
     margin: 5rem auto;
 }
 
-.help-grid {
+.help-grid, .guide-grid{
     grid-template-columns: none;
     line-height: 0.2;
 }
